syntax = "proto3";

package pb;

// Describes the RPCs for nodes to communicate in the cluster.
service Cluster {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {}
